<resources>
    <string name="app_name">PV256 Movio 2</string>
    <string name="changeTheme">Change Theme</string>
    <string name="title_activity_detail">Movie Detail</string>
    <string name="no_data">No data</string>
    <string name="no_connection">No internet connection</string>
    <string name="all">All</string>
    <string name="menu_new">New</string>
    <string name="popular">Popular</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="downloadStarted">Downloading data&#8230;</string>
    <string name="downloadFailed">Downloading data failed!</string>
    <string name="downloadDone">Downloading data done.</string>
    <string name="favorites">Favorites</string>
    <string name="favorite_removed">removed from favorites</string>
    <string name="favorite_added">added to favorites</string>
    <string name="content_authority">cz.muni.fi.pv256.movio2.uco_422536.provider</string>
    <string name="sync_account_type">cz.muni.fi.pv256.movio2.uco_422536.sync</string>
    <string name="upcoming">Upcoming</string>
    <string name="last_week">Last Week</string>
</resources>
